[project]
name = "ptsched"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lark>=1.2.2",
    "mako>=1.3.10",
]

[project.scripts]
ptsched = "ptsched:main"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.12.2",
]

[tool.uv.build-backend]
data = { data = "src/ptsched/data" }
